--- a/m_library/templates/base/base_blog.html
+++ b/m_library/templates/base/base_blog.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Blog</title>
+    <title>M-Library</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -25,7 +25,7 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon.jpg' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpg' %}">
 
     <!-- Stylesheets
@@ -59,24 +59,27 @@
             <div class="collapse navbar-collapse" id="agency-navbar-collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Library</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="{% url 'all books' %}">Library</a></li>
+                    <li><a href="{% url 'blog' %}">Blog</a></li>
 
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Add<i
-                            class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
+                    {% if request.user.is_authenticated %}
 
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li><a href="#">Add book</a></li>
-                            <li><a href="#">Add blog post</a></li>
-                        </ul>
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Add<i
+                                class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
-                    <li><a href="#">Profile</a></li>
-                    <!-- if user is logged in  -->
-                    <li><a href="#">Sign Out</a></li>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                <li><a href="{% url 'add book' %}">Add book</a></li>
+                                <li><a href="{% url 'add post' %}">Add blog post</a></li>
+                            </ul>
 
-                    <!-- else  -->
-                    <li><a href="#">Sign In</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                        <li><a href="{% url 'profile details' pk=request.user.pk %}">Profile</a></li>
+                        <!-- if user is logged in  -->
+                        <li><a href="{% url 'sign out' %}">Sign Out</a></li>
+                    {% else %}
+                        <!-- else  -->
+                        <li><a href="{% url 'sign in' %}">Sign In</a></li>
+                        <li><a href="{% url 'sign up' %}">Sign Up</a></li>
+                    {% endif %}
 
                 </ul>
 
