--- a/m_library/templates/base/base_library.html
+++ b/m_library/templates/base/base_library.html
@@ -25,7 +25,7 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon.jpg' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpg' %}">
 
     <!-- Stylesheets
